force-app/main/default/objects/Leave_Policy_Settings__c/Leave_Policy_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Stores global settings for leave management, such as the number of annual leave days.</description>
    <label>Leave Policy Settings</label>
</CustomObject>