force-app/main/default/objects/Leave_Policy_Settings__c/fields/Annual_Paid_Leave_Days__c.field-meta.xml
<CustomField>
    <fullName>Annual_Paid_Leave_Days__c</fullName>
    <label>Annual Paid Leave Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>