force-app/main/default/objects/Leave_Policy_Settings__c/fields/Minimum_Notice_Period_Days__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Notice_Period_Days__c</fullName>
    <label>Minimum Notice Period Days</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>